# exa-myim3

./: .gitignore  README.md  adbcommands.md  exa_myim3.db  main.py  pyproject.toml
app/: app.py  config.py  logging.py
app/adb/: server.py
app/automation/: indosat_flow.py  shellcommand.py
app/automation/actions/login/: __init__.py  interaction.py  navigation.py  verification.py
app/automation/actions/otp/: __init__.py  interaction.py  utils.py  verification.py
app/automation/flows/: login_flow.py  otp_flow.py
app/automation/popup/: pop_utils.py
app/automation/ui/: input_utils.py
app/config/: __init__.py  adb_config.py  constants.py  database.py  paths.py  settings.py
app/core/: auth.py  config.py  database.py  events.py  logging.py  models.py  settings.py  state.py
app/core/config/: __init__.py
app/database/: models.py
app/devices/: adb.py  adb_service.py  command.py  device_model.py  device_service.py  models.py  repository.py  routes.py  schemas.py  service.py
app/devices/routes/: __init__.py  devices.py
app/routes/: __init__.py  adb_routes.py  device_routes.py  system_routes.py
app/services/: __init__.py  adb_service.py  base_service.py
app/templates/static/css/: style.css
app/ui/: actions.py  element.py  flow.py
app/user/: auth.py  models.py  repository.py  routes.py  schemas.py  service.py
app/web/: auth.py  routes.py
app/web/templates/: auth_base.html  dashboard.html  devices.html  home.html  login.html  register.html  settings.html  sidebar.html
app/web/templates/static/css/: auth.css  (+1 more)
test/: test_login.py  test_otp.py
