[project]
name = "exa-myim3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psutil>=7.0.0",
    "pure-python-adb>=0.3.0.dev0",
    "pytest>=8.3.5",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
    "uiautomator2>=3.2.9",
]
