[project]
name = "exa-myim3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "htmx>=0.0.0",
    "passlib[bcrypt]>=1.7.4",
    "psutil>=7.0.0",
    "pydantic[email]>=1.10.21",
    "pytest>=8.3.5",
    "python-jose[cryptography]>=3.4.0",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
    "uiautomator2>=3.2.9",
    "uvicorn>=0.34.0",
]
